# a-maze-ing

./: .gitignore  LICENSE  Makefile  README.md  a_maze_ing.py  config.txt  pyproject.toml  read_config_file.py
mazegen/: mazegen.py
