[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
description = "Maze generator"
readme = "README.md"
requires-python = ">=3.10"

authors = [
  { name = "leak_team" }
]

[tool.setuptools.packages.find]
where = ["."]